--- a/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+++ b/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
@@ -124,6 +124,9 @@ jobs:
                   echo "DOCKER_PUSH          : ${{ inputs.DOCKER_PUSH }}"
                   echo "DOCKER_PUSH == true  : ${{ inputs.DOCKER_PUSH == true }}"
                   echo "DOCKER_PUSH == 'true': ${{ inputs.DOCKER_PUSH == 'true' }}"
+                  echo "DOCKER_BUILD_WHITH_OUT_CACHE          : ${{ inputs.DOCKER_BUILD_WHITH_OUT_CACHE }}"
+                  echo "DOCKER_BUILD_WHITH_OUT_CACHE == true  : ${{ inputs.DOCKER_BUILD_WHITH_OUT_CACHE == true }}"
+                  echo "DOCKER_BUILD_WHITH_OUT_CACHE == 'true': ${{ inputs.DOCKER_BUILD_WHITH_OUT_CACHE == 'true' }}"
                   str_download_urls="${{ inputs.STR_DOWNLOAD_URLS }}"
                   mkdir -p ./n2n/tmp/
                   echo -e "${str_download_urls//,/'\n'}" >> ./n2n/tmp/down_urls.txt
