--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -64,6 +64,7 @@ jobs:
 
                   LOG_INFO 'scan_all_save Starting'
                   export my_token='${{  secrets.GITHUB_TOKEN }}'
+                  LOG_INFO 'VERSION_BIG_ONLY: ${{  inputs.VERSION_BIG_ONLY }}'
                   export VERSION_BIG_ONLY='${{  inputs.VERSION_BIG_ONLY }}'
 
                   bash 1x1_n2n-scan-all.sh
